--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"react": "^18.2.0",
@@ -27,6 +28,7 @@
 		"prettier": "2.8.7",
 		"tasks-types": "^1.0.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.2.0"
+		"vite": "^4.2.0",
+		"vitest": "^0.30.1"
 	}
 }
