--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
+		"react-datepicker": "^4.11.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.10.0",
 		"styled-components": "^5.3.9"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
+		"@types/react-datepicker": "^4.10.0",
 		"@types/react-dom": "^18.0.11",
 		"@types/styled-components": "^5.1.26",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
