--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"@vitejs/plugin-react": "^3.1.0",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-react": "^7.32.2",
-		"prettier": "2.8.7",
+		"postcss": "^8.4.23",
+		"prettier": "^2.8.8",
+		"prettier-plugin-tailwindcss": "^0.2.8",
+		"tailwindcss": "^3.3.2",
 		"tasks-types": "^1.0.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.2.0",
