--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"daisyui": "^2.51.6",
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-datepicker": "^4.11.0",
